==> SolderedElectronics/Inkplate-ESP-IDF-component/components/inkplate/src/features/LSM6DS3/libs/SparkFunLSM6DS3.cpp <==
#include "SparkFunLSM6DS3.h"

status_t LSM6DS3Core::beginCore(void)
{
    // Brief startup delay
    vTaskDelay(pdMS_TO_TICKS(10));

    // Check the ID register to determine if the operation was a success.
    uint8_t readCheck;
    readRegister(&readCheck, LSM6DS3_ACC_GYRO_WHO_AM_I_REG);
    if (readCheck != 0x69)
    {
        return IMU_HW_ERROR;
    }

    return IMU_SUCCESS;
}

status_t LSM6DS3Core::readRegisterRegion(uint8_t *outputPointer, uint8_t offset, uint8_t length)
{
    esp_err_t err = i2c_master_transmit_receive(i2c_dev, &offset, 1, outputPointer, length, pdMS_TO_TICKS(100));
    return (err == ESP_OK) ? IMU_SUCCESS : IMU_HW_ERROR;
}

status_t LSM6DS3Core::writeRegister(uint8_t offset, uint8_t dataToWrite)
{
    uint8_t buf[2] = {offset, dataToWrite};
    esp_err_t err = i2c_master_transmit(i2c_dev, buf, 2, pdMS_TO_TICKS(100));
    return (err == ESP_OK) ? IMU_SUCCESS : IMU_HW_ERROR;
}
